Changes on the structure

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -8,6 +8,7 @@
 			src="resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-resourceroots='{"CEMOSA.ZYBC_probando": "./"}'
+			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-async="true"
@@ -15,8 +16,9 @@
 		</script>
 	</head>
 	<body class="sapUiBody" id="content">
-		<div data-sap-ui-component data-name="CEMOSA.ZYBC_probando" data-id="container" data-settings='{"id" : "ZYBC_probando"}'></div>
+		<!--<div data-sap-ui-component data-name="CEMOSA.ZYBC_probando" data-id="container" data-settings='{"id" : "walkthrough"}'></div>-->
 		<!-- <h1>First try</h1> -->
+		<div data-sap-ui-component data-name="CEMOSA.ZYBC_probando" data-id="container" data-settings='{"id" : "walkthrough"}'></div>
 		
 	</body>
 </html>
