Mock Server Configuration: mockServer.html -> data-sap-ui-resourceroots ={CEMOSA.ZYBC_probando:../}, data-sap-ui-oninit=module:CEMOSA/ZYBC_probado/test/initMockServer, data-name=CEMOSA.ZYBC_probando; mockServer.js -> var sPath = sap.ui.require.toUrl(CEMOSA/ZYBC_probando/localService)

--- a/webapp/test/mockServer.html
+++ b/webapp/test/mockServer.html
@@ -2,22 +2,21 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>SAPUI5 Walkthrough</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>SAPUI5 Walkthrough - Test Page</title>
 	<script
 		id="sap-ui-bootstrap"
 		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_belize"
-		data-sap-ui-libs="sap.m"
 		data-sap-ui-resourceroots='{
-			"sap.ui.demo.walkthrough": "./"
+			"CEMOSA.ZYBC_probando": "../"
 		}'
-		data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
+		data-sap-ui-oninit="module:CEMOSA/ZYBC_probando/test/initMockServer"
 		data-sap-ui-compatVersion="edge"
 		data-sap-ui-async="true">
 	</script>
 </head>
 <body class="sapUiBody" id="content">
-	<div data-sap-ui-component data-name="sap.ui.demo.walkthrough" data-id="container" data-settings='{"id" : "walkthrough"}'></div>
-
+	<div data-sap-ui-component data-name="CEMOSA.ZYBC_probando" data-id="container" data-settings='{"id" : "walkthrough"}'></div>
 </body>
 </html>
