--- a/webapp/test/unit/unitTests.qunit.html
+++ b/webapp/test/unit/unitTests.qunit.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Unit tests for SAPUI5 Walkthrough</title>
 	<meta charset="utf-8">
-	<title>Unit tests for CEMOSA.ZYBC_probando</title>
 
-	<script id="sap-ui-bootstrap"
-		src="../../../resources/sap-ui-core.js"
+	<script
+		id="sap-ui-bootstrap"
+		src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
 		data-sap-ui-resourceroots='{
-			"CEMOSA/ZYBC_probando": "../../"			
-		}'>
+			"CEMOSA.ZYBC_probando": "../../"
+		}'
+		data-sap-ui-async="true">
 	</script>
 
-	<link rel="stylesheet" type="text/css" href="../../../resources/sap/ui/thirdparty/qunit-2.css">
+	<link rel="stylesheet" type="text/css" href="https://openui5.hana.ondemand.com/resources/sap/ui/thirdparty/qunit-2.css">
 
-	<script src="../../../resources/sap/ui/thirdparty/qunit-2.js"></script>
-	<script src="../../../resources/sap/ui/qunit/qunit-junit.js"></script>
-	<script src="../../../resources/sap/ui/qunit/qunit-coverage.js"></script>
+	<script src="https://openui5.hana.ondemand.com/resources/sap/ui/thirdparty/qunit-2.js"></script>
+	<script src="https://openui5.hana.ondemand.com/resources/sap/ui/qunit/qunit-junit.js"></script>
+	<script src="https://openui5.hana.ondemand.com/resources/sap/ui/qunit/qunit-coverage.js"></script>
+	<script src="https://openui5.hana.ondemand.com/resources/sap/ui/thirdparty/sinon.js"></script>
+	<script src="https://openui5.hana.ondemand.com/resources/sap/ui/thirdparty/sinon-qunit.js"></script>
 
 	<script src="unitTests.qunit.js"></script>
 </head>
